<?xml version="1.0"?>
<package format="2">
  <name>tuw_global_planner</name>
  <version>0.0.0</version>
  <description>The tuw_global_planner contains tool to plan robot paths for single robots. Where global_planner is a fork of the navigation::global_planner with an voronoi path planner and tuw_waypoints_to_spline converts waypoints (navigation stack) to a spline usable by a local planner.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="markus.bader@tuwien.ac.at">Markus Bader</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>tuw_voronoi_map</exec_depend>
  <exec_depend>tuw_waypoint_to_spline</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
